--- a/src/templates/react.njk
+++ b/src/templates/react.njk
@@ -18,22 +18,16 @@
   {% endif -%}
 
   <!--[if IE]>
-  <link rel="shortcut icon" href="{{ getAssetPath('images/favicon.ico') }}" type="image/x-icon"><![endif]-->
+  <link rel="shortcut icon" href="{{ getAssetPath('favicon.ico') }}" type="image/x-icon"><![endif]-->
   <!-- Touch Icons - iOS and Android 2.1+ 180x180 pixels in size. -->
-  <link rel="apple-touch-icon" href="{{ getAssetPath('images/apple-touch-icon.png') }}">
+  <link rel="apple-touch-icon" href="{{ getAssetPath('apple-touch-icon.png') }}">
   <!-- Firefox, Chrome, Safari, IE 11+ and Opera. 192x192 pixels in size. -->
-  <link rel="icon" href="{{ getAssetPath('images/favicon-192x192.png') }}" type="image/png">
+  <link rel="icon" href="{{ getAssetPath('favicon-192x192.png') }}" type="image/png">
 
   <!-- styles -->
-  <link href="{{ getAssetPath('styles.css') }}" media="screen, print" rel="stylesheet">
+  <link href="{{ getAssetPath('shared.css') }}" media="screen, print" rel="stylesheet">
 
-  <!-- Google Tag Manager (GTM) -->
   {% include "_includes/google-tag-manager-snippet.njk" %}
-
-  <!--[if lt IE 9]>
-  <script src="{{ getAssetPath('html5shiv.min.js') }}"></script>
-  <![endif]-->
-
   {% include "_includes/csp-nonce.njk" %}
 {% endblock %}
 
