--- a/src/apps/__export-wins-review/view.njk
+++ b/src/apps/__export-wins-review/view.njk
@@ -14,6 +14,7 @@
         padding: 0;
       }
     </style>
+    {% include "_includes/google-tag-manager-snippet.njk" %}
   </head>
   <body>
     {% include "_includes/csp-nonce.njk" %}
