--- a/src/templates/_includes/google-tag-manager/gtag-definition.njk
+++ b/src/templates/_includes/google-tag-manager/gtag-definition.njk
@@ -1,4 +1,5 @@
 <script nonce='{{ cspNonce }}'>
   window.dataLayer = window.dataLayer || []
   window.gtag = function() { dataLayer.push(arguments); }
+  gtag('js', new Date())
 </script>
